Bigger wordlist. Better wordlist formatting (more spacing). Fixed a few bugs with the sentence engine.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .wordbox {
-	padding: 1px 2px 1px 2px;
+	padding: 1px 4px 1px 4px;
 	border: 1px solid #AAD;
 	background: #CCF;
 	text-align: center;
 	cursor: move;
-	margin: 1px;
+	margin: 4px;
 	float: left;
 }
 .wordscontainer {
@@ -37,7 +37,7 @@
 	clear: both;
 }
 .prop {
-	padding: 5px 0px 5px 0px;
+	padding: 8px 0px 8px 0px;
 	height: 1em;
 	float: right;
 }
